// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmStatus vm /> renders correctly 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-off"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 0 (VM_STATUS_OFF) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-off"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 1 (VM_STATUS_RUNNING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />,
  "Running",
]
`;

exports[`<VmStatus vm pod /> renders correctly 2 (VM_STATUS_STARTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="fail description for Ready"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 3 (VM_STATUS_STARTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  "Starting",
]
`;

exports[`<VmStatus vm pod /> renders correctly 4 (VM_STATUS_STARTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 5 (VM_STATUS_POD_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Pod scheduling failed."
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 6 (VM_STATUS_VMI_WAITING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 7 (VM_STATUS_VMI_WAITING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 8 (VM_STATUS_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 9 (VM_STATUS_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 10 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="virt-launcher-my-vm-x9c99: Importer pod scheduling failed."
  >
    Importer Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 11 (VM_STATUS_POD_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Back-off pulling image message"
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 12 (VM_STATUS_MIGRATING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-migration"
  />,
  "Migrating",
]
`;

exports[`<VmStatus vm pod /> renders correctly 13 (VM_STATUS_RUNNING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />,
  "Running",
]
`;

exports[`<VmStatus vm pod /> renders correctly 14 (VM_STATUS_IMPORTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/importer-datavolume-my-vm-x9c99/events"
  >
    Importing
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 15 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="importer-datavolume-my-vm-x9c99: undefined

virt-launcher-my-vm-x9c99: Importer pod scheduling failed."
  >
    Importer Error
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly 0 (VM_STATUS_OFF) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-off"
  />
  Off
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 1 (VM_STATUS_RUNNING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />
  Running
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 2 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="fail description for Ready"
  >
    Starting
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 3 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />
  Starting
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 4 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 5 (VM_STATUS_POD_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Pod scheduling failed."
  >
    Pod Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 6 (VM_STATUS_VMI_WAITING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 7 (VM_STATUS_VMI_WAITING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 8 (VM_STATUS_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 9 (VM_STATUS_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 10 (VM_STATUS_IMPORT_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="virt-launcher-my-vm-x9c99: Importer pod scheduling failed."
  >
    Importer Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 11 (VM_STATUS_POD_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Back-off pulling image message"
  >
    Pod Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 12 (VM_STATUS_MIGRATING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-migration"
  />
  Migrating
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 13 (VM_STATUS_RUNNING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />
  Running
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 14 (VM_STATUS_IMPORTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/importer-datavolume-my-vm-x9c99/events"
  >
    Importing
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 15 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <div>
    <span
      aria-hidden="true"
      class="kubevirt-vm-status__icon pficon pficon-import"
    />
    <a
      class="kubevirt-vm-status__link"
      href="/k8s/ns/my-namespace/pods/importer-datavolume-my-vm-x9c99/events"
    >
      Importing (testdisk)
    </a>
  </div>,
  <div>
    <span
      aria-hidden="true"
      class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
    />
    <a
      class="kubevirt-vm-status__link"
      href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
      title="virt-launcher-my-vm-x9c99: Importer pod scheduling failed."
    >
      Importer Error (testdisk)
    </a>
  </div>,
]
`;
